traduction en anglais

--- a/visualisation.ipynb
+++ b/visualisation.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0e4a4b4c",
    "metadata": {},
    "outputs": [
@@ -264,14 +264,14 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Noms des classes\n",
+    "# Class names\n",
     "classes = [\n",
     "    \"Mask\", \"can\", \"cellphone\", \"electronics\", \"gbottle\", \"glove\",\n",
     "    \"metal\", \"misc\", \"net\", \"pbag\", \"pbottle\", \"plastic\",\n",
     "    \"rod\", \"sunglasses\", \"tire\"\n",
     "]\n",
     "\n",
-    "# Nombre d'instances par classe (dans le même ordre)\n",
+    "# Number of instances per class\n",
     "counts = [\n",
     "    92,   # Mask\n",
     "    20,   # can\n",
@@ -295,8 +295,8 @@
     "plt.bar(classes, counts, color=colors)\n",
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.xlabel(\"Classes\")\n",
-    "plt.ylabel(\"Nombre d'instances\")\n",
-    "plt.title(\"Distribution des classes dans le jeu de validation\")\n",
+    "plt.ylabel(\"Number of instances\")\n",
+    "plt.title(\"Distribution of classes in the dataset\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
